--- a/homework3.Rmd
+++ b/homework3.Rmd
@@ -3,8 +3,8 @@ title: "homework3"
 date: "2019-04-19"
 output: html_document
 params:
-  studentID: "你的學號"
-  studentName: "你的姓名"
+  studentID: "410572093"
+  studentName: "范又懿"
 ---
 # 注意事項
 
@@ -49,12 +49,20 @@ finStatement <- read_csv("http://mopsfin.twse.com.tw/opendata/t187ap06_O_ci.csv"
 變數**營業利益（損失）**是公司本業的利益（若為正值）或損失（若為負值）。請找出有營業損失的公司名稱，存成character class的答案物件loss1Companies。
 ```{r ans11}
 # loss1Companies
+lossCompanies <- finStatement[["營業利益（損失）"]] <=0
+map(finStatement,~.[lossCompanies]) -> loss1Companies
+loss1Companies <- loss1Companies[["公司名稱"]]
+loss1Companies
 ```
 
 ### 1.2 每股盈餘
 請找出每股盈餘為負值的公司名稱，存成character class的答案物件loss2Companies。
 ```{r ans12}
 # loss2Companies
+x <- finStatement[["基本每股盈餘（元）"]] <=0
+map(finStatement,~.[x]) -> loss2Companies
+loss2Companies <- loss2Companies[["公司名稱"]]
+loss2Companies
 ```
 
 ### 1.3 單一條件成立
@@ -69,12 +77,23 @@ finStatement <- read_csv("http://mopsfin.twse.com.tw/opendata/t187ap06_O_ci.csv"
 
 ```{r ans13}
 # only1LossCompanies
+gainprofit <- finStatement[["營業利益（損失）"]] >=0
+map(finStatement,~.[gainprofit]) -> gainprofit01
+gainprofit01 <- gainprofit01[["公司名稱"]]
+
+gain  <- finStatement[["基本每股盈餘（元）"]] >=0
+map(finStatement,~.[gain]) -> gain01
+gain01 <- gain01[["公司名稱"]]
+only1LossCompanies <- c_((gainprofit01 & loss2Companies) or (gain01 & loss1Companies))
+only1LossCompanies
+
 ```
 
 ### 1.4 子樣本
 本題物件為data frame class，使用`[.R,.C]`選出符合上題條件的子樣本，存成data frame class的答案物件subsample。
 ```{r ans14}
 # subsample
+
 ```
 
 ## 2 展覽資訊
@@ -94,6 +113,8 @@ str(exhibitionList[[1]])
 請使用`length()`檢查exhibitionList裡的活動數目，並把數值存在答案物件numExhibitions。
 ```{r ans21}
 # numExhibitions
+length(exhibitionList) -> numExhibitions
+numExhibitions
 ```
 
 ### 2.2 創建活動data frame
@@ -109,6 +130,13 @@ str(exhibitionList[[1]])
 
 ```{r ans22}
 # df_oneShow
+qq <- exhibitionList[[1]]
+df_oneShow <- data.frame(qq$.title, qq$.showInfo[["time"]],qq$.showInfo[["location"]],
+                         qq$.showInfo[["locationName"]],
+                         qq$.showInfo[["price"]],
+                         qq$.showInfo[["endTime"]],
+                         qq$.showInfo[["sourceWebName"]])
+df_oneShow
 ```
 
 ### 2.3 活動創立函數
@@ -146,6 +174,8 @@ map_dfr(exhibitionList,dataframe_show_info) -> df_allShows
 
 ```{r ans25}
 # totalCount
+totalCount <- sum(exhibitionList[["sourceWebName"]] == "全國藝文活動資訊系統")
+totalCount
 ```
 
 
